# Noir_Browser

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Noir_Browser_Implementation_Summary.md  Noir_Browser_Roadmap.md  QUICKSTART.md  README.md  rutas.md
No-Chromium/: CHANGES_SUMMARY.md  Cargo.lock.backup  Cargo.toml  FASE0_CHECKLIST.md  Fases.md  QUICKSTART.md  README.md  RECONSTRUCCION_v2.md  THE_BIBLE_SUMMARY.md  bench_engine.rs  bible_analyzer.py  error_log.txt  extractor.py  invidious_watch.html  master_codegen.py  omnia_extractor.py  rust_codegen.py  v8_reconstruction_map.json  vulkan_codegen.py
No-Chromium/No-Chromium/generated_rust/: net_stack.rs  vulkan_painter.rs
No-Chromium/SVG-Icon/: README.md  icon-manifest.json
No-Chromium/docs/: WebGPU_Architecture.md  chromium_dna.md
No-Chromium/extracted_data/: console.idl  dom.idl
No-Chromium/generated_rust/: mod.rs
No-Chromium/profile/: history.json
No-Chromium/scripts/: generate_bridge.py  generate_js_engine.py  generate_js_engine_v2.py  generate_js_engine_v3.py  generate_promises.py  generate_tests.py  generate_wasm.py  generate_wasm_v2.py  generate_webgpu.py  py.bat  setup_phase0.sh
No-Chromium/src/: app.rs  bootstrap.rs  lib.rs  main.rs  renderer_trait.rs
No-Chromium/src/app/: compositor.rs  config.rs  context.rs  draw.rs  error_pages.rs  event_loop.rs  glyphs.rs  input.rs  layer_tree.rs  metrics.rs  mod.rs  navigation.rs  navigation_pipeline.rs  paint_records.rs  renderer.rs  scroll.rs  state.rs  theme.rs
No-Chromium/src/archive/browser/: coordinator.rs  navigation.rs
No-Chromium/src/archive/layout/: layout_gen.rs  mod.rs  text_rasterizer.rs
No-Chromium/src/archive/render/: mod.rs  renderer_3d.rs  text.rs
No-Chromium/src/bootstrap/: error.rs  logger.rs
No-Chromium/src/bridge/: examples.rs  mod.rs
No-Chromium/src/browser/: coordinator.rs  history.rs  mod.rs  navigation.rs  page.rs  tab_manager.rs
No-Chromium/src/devtools/: form_fill.rs  http_error.rs  image_loading.rs  inspector.rs  mod.rs
No-Chromium/src/dom/: events.rs  fetch_api.rs  live_dom.rs  mod.rs  timers.rs
No-Chromium/src/features/: favorites.rs  find_in_page.rs  mod.rs  network_monitor.rs  password_manager.rs  permissions.rs  print_pdf.rs  pwa.rs  reader_mode.rs  screenshot.rs  service_worker.rs  tab_groups.rs
No-Chromium/src/generated_rust/: array_logic.rs  css_engine.rs  dom_native.rs  html_elements.rs  mod.rs  v8_core.rs  vulkan_context.rs  vulkan_hardware.rs  vulkan_painter.rs  web_platform_data.rs
No-Chromium/src/generated_rust_backup/: bootstrapper.rs  vulkan_painter.rs
No-Chromium/src/js_engine/: bindings.rs  challenge.rs  dom_bridge.rs  dom_sync.rs  events.rs  mod.rs  modules.rs  runtime.rs  sandbox.rs  web_apis.rs
No-Chromium/src/js_engine_v2/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
No-Chromium/src/js_engine_v3/: ast.rs  builtins.rs  console.rs  dom.rs  env.rs  fetch.rs  ignition.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  promise.rs  timer.rs  value.rs
No-Chromium/src/layout/: layout_gen.rs  mod.rs  text_rasterizer.rs
No-Chromium/src/media/: audio.rs  audio_playback.rs  av_sync.rs  dash.rs  discovery.rs  frame.rs  hls.rs  hls_selector.rs  http_range.rs  image_loader.rs  image_manager.rs  image_support.rs  mod.rs  mp4.rs  mp4_demuxer.rs  mse.rs  mse_queue.rs  pipeline.rs  player.rs  player_ui.rs  pre_cached_assets.rs  url_extractor.rs  video.rs  video_texture.rs  webvtt.rs  yuv_gpu.rs
No-Chromium/src/network/: doh_resolver.rs  fetch.rs  mod.rs  socks_proxy.rs  url_resolver.rs
No-Chromium/src/parsers/: css_engine.rs  css_grid_v2.rs  css_lexer.rs  css_loader.rs  css_simple.rs  dom_native.rs  dom_tree.rs  events.rs  flexbox.rs  flexbox_v2.rs  html_elements.rs  html_lexer.rs  html_lexer_legacy.rs  http_client.rs  invalidation.rs  js_lexer.rs  layout.rs  media_queries.rs  mod.rs  page_document.rs  position_v2.rs  resource_loader.rs  rule_tree.rs  shaders.rs  style_cache.rs  style_collector.rs  webidl_bridge.rs  youtube_extract.rs
No-Chromium/src/render/: compositor.rs  mod.rs  quality.rs  renderer_2d.rs  text.rs
No-Chromium/src/renderer/: html_parser.rs  layout_engine.rs  mod.rs
No-Chromium/src/runtime/: dom_runtime.rs  mini_js.rs  mod.rs  script_collector.rs
No-Chromium/src/security/: cookies.rs  cors.rs  csp.rs  headers.rs  mixed_content.rs  mod.rs  origin.rs  referrer.rs  url.rs
No-Chromium/src/storage/: bookmarks.rs  download.rs  history.rs  local_storage.rs  mod.rs  path.rs  session_storage.rs  settings.rs  tabs.rs
No-Chromium/src/tests/: image_tests.rs  layout_tests.rs  parser_tests.rs
No-Chromium/src/ui/: ad_blocker.rs  card_layout.rs  click_feedback.rs  css_containment.rs  css_grid.rs  element_highlight.rs  list_render.rs  markdown.rs  mod.rs  table_render.rs  text_shaping.rs  ui_gen.rs
No-Chromium/src/utils/: ipc.rs  memory.rs  mod.rs  process_model.rs
No-Chromium/src/vulkan_engine/: context.rs  core.rs  memory_gen.rs  mod.rs  pipeline_gen.rs  real_renderer.rs  renderer.rs  setup.rs  shaders_gen.rs  swapchain.rs
No-Chromium/src/wasm_engine/: decoder.rs  executor.rs  mod.rs  reader.rs  types.rs
No-Chromium/src/wasm_host/: debug_test.rs  dom_bindings.rs  imports.rs  instance.rs  memory.rs  mod.rs  module.rs  table.rs  value.rs  wasi_runtime.rs
No-Chromium/src/wasm_v2/: arena.rs  compiler.rs  decoder.rs  interpreter.rs  jit.rs  leb128.rs  mod.rs  opcodes.rs  runtime.rs  types.rs  validator.rs  value.rs  wasi.rs
No-Chromium/src/webgpu/: bridge.rs  buffer.rs  compute.rs  device.rs  gpu_renderer.rs  integration.rs  mod.rs  pipeline.rs  pwa.rs  renderer.rs  shaders.rs  surface.rs  texture.rs  texture_atlas.rs
No-Chromium/tests/: bin_smoke_test.rs  extraction_test.rs  features_test.rs  flexbox_e2e_test.rs  grid_test.rs  integration_test.rs  js_integration_test.rs  layout_click_test.rs  layout_v2_test.rs  media_queries_e2e_test.rs  mp4_pipeline_integration.rs  no_script_render_test.rs  phase3_test.rs  position_e2e_test.rs  real_page_e2e_test.rs  window_size_test.rs
No-Chromium/tools/: README.md  app_shell_probe.py  page_probe.py  web_platform_export.py
(+52 files in other folders)
