[workspace]
members = ["No-Chromium"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["andre"]
description = "Noir Browser: Ultra-fast, privacy-first web browser built in Rust + Vulkan"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.9"
gpu-allocator = "0.25"
winit = { version = "0.29", features = ["rwh_05"] }
raw-window-handle = "0.5"
nom = "7.1"
memchr = "2.7"
html5ever = "0.26"
markup5ever = "0.11"
cssparser = "0.31"
selectors = "0.25"
boa_engine = "0.18"
boa_parser = "0.18"
boa_ast = "0.18"
boa_gc = "0.18"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks", "http2"] }
rustls = "0.21"
tokio-socks = "0.5"
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }
zeroize = { version = "1.7", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
sha2 = "0.10"
hmac = "0.12"
webpki-roots = "0.26"
smallvec = "1.13"
slotmap = "1.0"
dashmap = "5.5"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
rustybuzz = "0.12"
ttf-parser = "0.20"
fontdb = "0.16"
tantivy = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
futures = "0.3"
zstd-sys = { version = "=2.0.8" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1
debug = true