[package]
name = "no-chromium"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
ash.workspace = true
ash-window.workspace = true
gpu-allocator.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
tokio.workspace = true
async-trait.workspace = true
html5ever.workspace = true
markup5ever.workspace = true
cssparser.workspace = true
selectors.workspace = true
nom.workspace = true
memchr.workspace = true
boa_engine.workspace = true
boa_parser.workspace = true
boa_gc.workspace = true
boa_ast.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
glam.workspace = true
image.workspace = true
rustybuzz.workspace = true
fontdb.workspace = true
ttf-parser.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
zeroize.workspace = true
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
smallvec.workspace = true
slotmap.workspace = true
dashmap.workspace = true
bytes.workspace = true
once_cell.workspace = true
tantivy.workspace = true
lru.workspace = true
futures.workspace = true
vulkano = { version = "0.34", optional = true }
rusqlite = { version = "0.30", features = ["bundled", "fts5"], optional = true }

[features]
default = ["ultrafast"]
ultrafast = []
debug_vulkan = ["ash/debug"]
fallback_vulkano = ["dep:vulkano"]
video_decode = []
local_search = ["dep:rusqlite"]
privacy = []
tor_mode = ["privacy"]
msdf_fonts = []

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
